Fixed github issue text, fixed truncation color

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,7 @@
   --dark-link-text-hover: #D9DADA;
   --dark-link-text-visited: #4c5053;
   --dark-panel-bg: #25282e;
-  --dark-text: #b2b6b9;
+  --dark-text: #f5f5f5;
   --dark-border: 1px solid #191919;
 
   --dark-robot: #ffffff;
